--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="col-md-6 offset-lg-1 d-flex align-items-center">
-          <img class="img-fluid" src="img/c.jpeg" alt="" />
+          <img class="img-fluid" src="img/rec.png" alt="" />
         </div>
       </div>
     </div>
@@ -158,12 +158,20 @@
       </div>
       <div class="row">
         <div
-          class="col nav-bg d-flex flex-wrap justify-content-center pt-5 rounded-4 mx-3"
+          class="col nav-bg align-content-center pt-5 rounded-4 mx-3"
         >
-          <h4 class="text-light fw-semibold pb-3">
-            Cek Informasi Seperti Kategori Jenis Sampah
-          </h4>
-          <img class="img-fluid" src="img/smpah.png" alt="" />
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h4 class="text-light fw-semibold pb-3">
+              Cek Informasi Seperti Kategori Jenis Sampah
+            </h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <img class="img-fluid" src="img/smpah.png" alt="" />
+          </div>
+        </div>
         </div>
       </div>
     </div>
